<resources>
    <string name="app_name">Planner Lite</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Тесктовые элементы главного меню Navigation drawer -->
    <string name="nav_drawer_notes">Notes</string>
    <string name="nav_drawer_events">Events</string>
    <string name="nav_drawer_events_all">Calendar</string>
    <string name="nav_drawer_events_today">Today</string>
    <string name="nav_drawer_search">Search</string>
    <string name="nav_drawer_backup">BackUp</string>

    <!-- Текстовые элементы PlannerMainActivity-->
    <string name="create_recovery_file">Create backup copy</string>
    <string name="create_recovery_file_annotation">BackUp copy on: </string>

    <!-- Текстовые элементы PlannerEditNoteActivity-->
    <string name="edit_note_header">Edit note</string>
    <string name="edit_note_hint_title">Title</string>
    <string name="edit_note_hint_text">Note text</string>

    <!-- Текстовые элементы PlannerAddNoteActivity-->
    <string name="add_note_header">New note</string>

    <!-- Текстовые элементы PlannerAddEventActivity-->
    <string name="add_event_header">New event</string>
    <string name="edit_event_header">Edit event</string>
    <string name="add_event_date_hint">Click for select date</string>
    <string name="add_event_time_hint">Click for select time</string>
    <string name="add_event_body_hint">Enter event</string>

    <!-- Текстовые элементы PlannerSearchEventOrNoteActivity-->
    <string name="search_header">Search</string>

    <!-- Тесктовые элементы компонетов основного меню-->
    <string name="action_settings">Settings</string>
    <string name="action_find">Search</string>

    <!-- Тесктовые элементы компонента событие -->
    <string name="event_status_active">Active</string>
    <string name="event_status_done">Done</string>

    <!-- Диалоги -->
    <!-- Тесктовые элементы компонентов диалогового окна выбора (Создание заматки, события, контакта)-->
    <string name="fabMain_new_note_dialog">Note</string>
    <string name="fabMain_new_event_dialog">Event</string>
    <string name="fabMain_new_contact_dialog">Contact</string>

    <!-- Тесктовые элементы диалогового окошка ShareNoteButton -->
    <string name="note_share_button_send_sms">Send on SMS</string>
    <string name="note_share_button_send_email">Send on E-Mail</string>

    <!-- Тесктовые элементы компонентов дилогового окна (Сохранение изменений)-->
    <string name="save_changes_dialog_message">Saving changes?</string>
    <string name="save_changes_dialog_ok">OK</string>
    <string name="save_changes_dialog_cancel">Cancel</string>

    <!-- Текстовые элементы компонентов диалогового окна (Удаление заметки)-->
    <string name="delete_note_dialog_message">Delete note?</string>
    <string name="delete_note_dialog_ok">OK</string>
    <string name="delete_note_dialog_cancel">Cancel</string>

    <!--Текстовые элементы диалогового окна выбора группы поиска-->
    <string name="search_on_notes">Search on notes</string>
    <string name="search_on_events">Search on events</string>
    <string name="searching_progress">Searching...</string>

    <!-- Оповещения-->
    <!-- Текстовое сообщение о не заполненом поле дата-->
    <string name="snack_bar_null_event_date">Error! Does not set date!</string>

    <!--Текстовое сообщение о не заполненом поле время-->
    <string name="snack_bar_null_event_time">Error! Does not set the time!</string>

    <!-- Группы элементов для выпадающих списков -->
    <!-- Тесктовые элементы Группы заметок-->
    <string name="note_group_general">General</string>
    <string name="note_group_favorites">Favorites</string>

    <!-- Тесктовые элементы Напомнить мне-->
    <string name="event_remind_15_min">Remind me in 15min.</string>
    <string name="event_remind_30_min">Remind me in 30min.</string>
    <string name="event_remind_1_hour">Remind me in 1h.</string>
    <string name="event_remind_3_hour">Remind me in 3h.</string>
    <string name="event_remind_6_hour">Remind me in 6h.</string>

    <!-- Текстовые элементы карточки статистики -->
    <string name="subtotal_all_events">All events: </string>
    <string name="subtotal_only_active_events">Active events: </string>
    <string name="subtotal_finish_events">Finishing events: </string>

    <!--Текстовые элементы для отображения месяцев в MaterialCalendarView-->
    <string-array name="arrMonths">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>
