<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.PlannerAddEventActivity"
    tools:showIn="@layout/activity_event_details">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_margin="@dimen/cardview_margin">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp">

            <TextView
                android:id="@+id/mEventDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/event_hint_margin"
                android:gravity="center|center_vertical"
                android:hint="@string/add_event_date_hint"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/event_hint_text_size"
                android:textColor="@color/colorPrimaryText"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp">

            <TextView
                android:id="@+id/mEventTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/event_hint_margin"
                android:gravity="center|center_vertical"
                android:hint="@string/add_event_time_hint"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/event_hint_text_size"
                android:textColor="@color/colorPrimaryText"/>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_margin="@dimen/cardview_margin">

        <Spinner
            android:id="@+id/mRemindMeParam"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="@dimen/cardview_margin">

        <EditText
            android:id="@+id/mEventBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|left"
            android:hint="@string/add_event_body_hint"
            android:textColorHint="@color/colorAccent"/>

    </android.support.v7.widget.CardView>

</LinearLayout>